# chat-core

./: Cargo.toml
src/: main.rs  routes.rs
src/errors/: common_errors.rs  http_errors.rs  mod.rs
src/modules/chat/: mod.rs  model.rs  port.rs  service.rs
src/modules/chat/adapter/: actix_handler.rs  db_adapter.rs  mod.rs  tool_repo_adapter.rs
src/modules/chat/tools/: get_info.rs  mod.rs  port.rs
